# python_3_8_10

./: README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json
