[tool.poetry]
name = "python_3_8_10"
version = "0.0.0"
description = "python_3_8_10"
authors = [""]
license = "Creative Commons CC0 1.0 Universal (CC0 1.0) Public Domain Dedication"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
# lint
flake8 = "4.0.1"
black = "22.6.0"
flake8-docstrings = "1.6.0"
flake8-quotes = "3.3.1"
flake8-bugbear = "22.6.22"


# notebook
ipykernel = "6.15.1"
